errors/2020-11-24-00-26-36.txt
Traceback (most recent call last):
  File "/private/home/drkthomp/protect3/venv/bin/ProTECT", line 11, in <module>
    load_entry_point('protect', 'console_scripts', 'ProTECT')()
  File "/private/home/drkthomp/protect3/venv/lib/python3.6/site-packages/pkg_resources/__init__.py", line 565, in load_entry_point
    return get_distribution(dist).load_entry_point(group, name)
  File "/private/home/drkthomp/protect3/venv/lib/python3.6/site-packages/pkg_resources/__init__.py", line 2631, in load_entry_point
    return ep.load()
  File "/private/home/drkthomp/protect3/venv/lib/python3.6/site-packages/pkg_resources/__init__.py", line 2291, in load
    return self.resolve()
  File "/private/home/drkthomp/protect3/venv/lib/python3.6/site-packages/pkg_resources/__init__.py", line 2297, in resolve
    module = __import__(self.module_name, fromlist=['__name__'], level=0)
  File "/private/home/drkthomp/protect3/src/protect/pipeline/ProTECT.py", line 46, in <module>
    from protect.expression_profiling.rsem import wrap_rsem
  File "/private/home/drkthomp/protect3/src/protect/expression_profiling/rsem.py", line 81
    '-p', 10),
            ^
SyntaxError: invalid syntax
